<resources>
    <string name="app_name">AllVideoDownloader</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="video_downloader">Video Downloader</string>
    <string name="share_app">Share App</string>
    <string name="about">About</string>
    <string name="progress">Progress</string>
    <string name="download">Download</string>
    <string name="home">Home</string>

    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="vimeo">Vimeo</string>
    <string name="tiktok">TikTok</string>
    <string name="twitter">Twitter</string>
    <string name="pinterest">Pinterest</string>
    <string name="youtube">YouTube</string>
    <string name="status_saver">Status Saver</string>
    <string name="social_media_apps">Social Media Apps</string>
    <string name="more_apps">More Apps</string>
    <string name="contact">Contact</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_error">Not a valid URL</string>
    <string name="download_complete">Download Completed</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_start">Download Start</string>
    <string name="accept_to_continue">Accept to continue..</string>
</resources>