<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/app_background"
    android:layout_height="match_parent"
    tools:context=".about.AboutFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPrivacyPolicy"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_button"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContact"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_button"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/contact"
        android:textColor="@color/white"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnMoreApps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrivacyPolicy"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMoreApps"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_button"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/more_apps"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContact"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>