<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


    <View
        android:id="@+id/searchBackground"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/search_button"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSearchBar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:maxLines="1"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/drawer_download"
        android:drawablePadding="@dimen/_6sdp"
        android:hint="Past your link"
        android:paddingHorizontal="@dimen/_6sdp"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="@+id/searchBackground"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_6sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="@+id/searchBackground"
        app:layout_constraintEnd_toEndOf="@+id/searchBackground"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:tint="@color/bottom_bar_seleceted" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSocialApps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/social_media_apps"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/searchBackground" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:columnOrderPreserved="false"
        android:paddingTop="@dimen/_8sdp"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtSocialApps">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_65sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/instagram"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_65sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/facebook"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_65sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/dailymotion"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_65sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/vimeo"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_65sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/tiktok"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_65sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/twitter"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_65sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/pinterest"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_65sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_columnWeight="1"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/youtube"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </GridLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status_saver"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/grid" />

    <GridLayout
        android:id="@+id/grid2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:columnOrderPreserved="false"
        android:paddingVertical="@dimen/_8sdp"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtStatus">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_70sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/facebook"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_70sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:background="@drawable/home_icons_bg"
            android:layout_height="@dimen/_90sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/facebook"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>